examples/test/testpolicy5569.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5569
  namespace: namespace81
spec:
  podSelector:
    matchLabels:
      key35: value23
      key4: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value11
      podSelector:
        matchLabels:
          key16: value16
          key5: value9
